Add hashing to torrent importing